<resources>
    <string name="app_name">Assignment2</string>
    <string name="OptionsButton">Options</string>
    <string name="SwitchOn">Switch is on</string>
    <string name="SwitchOff">Switch is off</string>
    <string name="RadioLabel">Radio Buttons</string>
    <string name="Radio1">1</string>
    <string name="Radio2">2</string>
    <string name="Radio3">3</string>
    <string name="Radio4">4</string>
    <string name="textName">Name</string>
    <string name="checkedNo">Box is not checked</string>
    <string name="checkedYes">Box is checked</string>
    <string name="startSlide">Start slide at position %d</string>
    <string name="endSlide">Saved slide at position %d</string>
    <string name="ButtonLabel">Click Me</string>
    <string name="ButtonTemplate">You have clicked this button %d times</string>
    <string name="Xeno">Xeno: To Reach the end you must first get half way there</string>
    <string name="Stars">You\'ve selected %f stars</string>
    <string name="ImageButton">Image</string>
    <string name="Attribution">Starfield image CC-BY-2.0 user Filter Forge on flickr</string>
    <string name="backBtn">Back</string>
    <string name="SoundButton">Sound</string>
    <string name="PlayButton">Play</string>
</resources>
